--- a/app/views/start.html
+++ b/app/views/start.html
@@ -1,5 +1,6 @@
  <img id="logo" src="img/logo.png">
-    <div id="timer">
-    Timed Game: <input type="checkbox" 
+    <div class="form-group">
+  <label for="power">Timed Game: </label>
+  
     </div>
     <button (click)="start()">Start</button>
