--- a/app/views/start.html
+++ b/app/views/start.html
@@ -1,4 +1,4 @@
- <img id="logo" src="img/logo.png">
+ <img id="logo" src="lib/img/logo.png">
     <div class="form-group">
   <label for="power">Timed Game: </label>
   
