--- a/app/views/start.html
+++ b/app/views/start.html
@@ -13,3 +13,5 @@
   </select>
     </div>
     <button (click)="startGame()" class="btn primary">Start</button>
+
+    <button class="btn recap">Recap</button>
