--- a/lib/css/app.css
+++ b/lib/css/app.css
@@ -251,6 +251,10 @@ textarea {
   font-weight: bold;
   font-size: 24px; }
 
+.btn.recap {
+  background: #ffde17;
+  color: black; }
+
 body {
   margin: 0;
   padding: 0;
@@ -260,3 +264,6 @@ body {
   width: 100%;
   background: #3dbb9b;
   height: 100vh; }
+
+img {
+  max-width: 100%; }
