updating pass and write

--- a/app/views/pass.html
+++ b/app/views/pass.html
@@ -1,2 +1,3 @@
-lalalala nexyt screen after 3 seconds or so (not implemented yet)
-<button (click)="nextStep()">Next</button>
+<button (click)="nextStep()" id="go_forward"><img src="lib/img/icon_forward.png"></button>
+
+<img src="lib/img/pass2.gif" id="pass-animation" alt="">
