--- a/app/views/write.html
+++ b/app/views/write.html
@@ -1,3 +1,8 @@
-I am the coolest.
-<input type="text" placeholder="write something down" />
-<button (click)="nextStep()">Next</button>
+
+<div class="super-imposed-content">
+	<input type="text" placeholder="write something down" />
+	<button (click)="nextStep()" id="go_forward"><img src="lib/img/icon_forward.png"></button>
+</div>
+
+
+<img src="http://www.placecage.com/375/667" alt="" class="photo_bg">
