--- a/lib/css/app.css
+++ b/lib/css/app.css
@@ -255,15 +255,44 @@ textarea {
   background: #ffde17;
   color: black; }
 
+#go_forward {
+  width: 41px;
+  height: 53px;
+  background: none;
+  border: 0;
+  position: absolute;
+  top: 10px;
+  right: 10px; }
+
+#pass_animation {
+  margin: 0 auto; }
+
+.photo_bg {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9; }
+
+.super-imposed-content {
+  z-index: 99;
+  position: relative; }
+
 body {
   margin: 0;
   padding: 0;
-  font-family: 'aileron'; }
+  font-family: 'aileron';
+  background: #444; }
 
 #wrapper {
   width: 100%;
+  max-width: 670px;
+  margin: 0 auto;
+  position: relative;
   background: #3dbb9b;
-  height: 100vh; }
+  height: 100vh;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); }
 
 img {
   max-width: 100%; }
