--- a/lib/scss/app.scss
+++ b/lib/scss/app.scss
@@ -7,6 +7,7 @@ $yellow: #ffde17;
 @import 'boilerplate';
 @import 'fonts';
 @import "btn";
+@import "ui";
 @import 'custom';
 
 
@@ -14,12 +15,18 @@ body {
 	margin:0;
 	padding:0;
 	font-family: 'aileron';
+	background: #444;
 }
 #wrapper {
 	width:100%;
+	max-width: 670px;
+	margin: 0 auto;
+	position: relative;
 	background:#3dbb9b;
 
 	height:100vh;
+
+	box-shadow: 0 0 20px rgba(0,0,0,.5);
 	
 }
 
