--- a/app/views/draw.html
+++ b/app/views/draw.html
@@ -1,2 +1,6 @@
-draw something! (not implemented yet)
 <button (click)="nextStep()">Next</button>
+
+
+<div class="draw-prompt">
+	<p>Depressed Adele sitting next to a whale.</p>
+</div>
