--- a/lib/scss/_ui.scss
+++ b/lib/scss/_ui.scss
@@ -37,3 +37,14 @@
 	z-index: 99;
 	position: relative;
 }
+
+
+// ****************************
+// PAGE: DRAW
+// ****************************
+
+.draw-prompt {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
