--- a/lib/css/app.css
+++ b/lib/css/app.css
@@ -279,6 +279,11 @@ textarea {
   z-index: 99;
   position: relative; }
 
+.draw-prompt {
+  position: absolute;
+  bottom: 0;
+  left: 0; }
+
 body {
   margin: 0;
   padding: 0;
