--- a/lib/scss/_ui.scss
+++ b/lib/scss/_ui.scss
@@ -25,17 +25,22 @@
 // photo backgrounds on the page
 .photo_bg {
 	width: 100%;
-	height: 100vh;
 
 	position: absolute;
 	top: 0;
 	left: 0;
 	z-index: 9;
+
+	&.faded {
+		filter: grayscale(100%);
+		opacity: .1;
+	}
 }
 
 .super-imposed-content {
 	z-index: 99;
 	position: relative;
+	height: 100%;
 }
 
 
@@ -47,5 +52,12 @@
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	
+	width: 100%;
+	padding: 10px;
+	box-sizing: border-box;
+
+	font-weight: normal;
+
+	color: white;
+	background: rgba(0,0,0,.8);
 }
