--- a/app/views/pass.html
+++ b/app/views/pass.html
@@ -1,3 +1,5 @@
-<button (click)="nextStep()" id="go_forward"><img src="lib/img/icon_forward.png"></button>
 
-<img src="lib/img/pass2.gif" id="pass-animation" alt="">
+<section id="pass-screen" class="bg-teal fill-page">
+	<button (click)="nextStep()" id="go_forward"><img src="lib/img/icon_forward.png"></button>
+	<img src="lib/img/pass2.gif" id="pass-animation" alt="">
+</section>
