--- a/app/views/start.html
+++ b/app/views/start.html
@@ -1,6 +1,6 @@
 
 
-<section id="start">
+<section id="start" class="fill-page bg-teal">
 	<img id="logo" src="lib/img/logo.png">
 	<div class="form-group">
 		<label for="alterEgo">timed game?</label>
@@ -21,7 +21,7 @@
 </section>
 
 <!--
-<section id="recap">
+<section id="recap" class="bg-white fill-page">
 	<div class="super-imposed-content">
 		<div class="center view-recap-wrapper">
 			<button class="btn view-recap"><img src="lib/img/lightening-bolt.png" alt="" class="bolt"> Recap</button>
