--- a/app/views/draw.html
+++ b/app/views/draw.html
@@ -1,11 +1,10 @@
-<div class="headline">Draw: {{drawText}}</div>
+<section id="draw-screen" class="fill-page bg-white">
+
 	<div class="literally"></div>
+	<button (click)="nextStep()" id="go_forward"><img src="lib/img/icon_forward.png"></button>
 
-	
-<button (click)="nextStep()">Next</button>
+	<div class="draw-prompt">
+		<p>Depressed Adele sitting next to a whale. {{drawText}}</p>
+	</div>
 
-
-
-<div class="draw-prompt">
-	<p>Depressed Adele sitting next to a whale.</p>
-</div>
+</section>
