adding undo button

--- a/app/views/draw.html
+++ b/app/views/draw.html
@@ -3,6 +3,8 @@
 	<div class="literally"></div>
 	<button (click)="nextStep()" id="go_forward"><img src="lib/img/icon_forward.png"></button>
 
+	<img src="lib/img/icon_undo.png" alt="">
+
 	<div class="draw-prompt">
 		<p>Depressed Adele sitting next to a whale. {{drawText}}</p>
 	</div>
