--- a/lib/scss/_draw-canvas.scss
+++ b/lib/scss/_draw-canvas.scss
@@ -1,6 +1,11 @@
 .lc-color-pickers {
 	display:none;
 }
+
+.literally {
+  background-color: white;
+  min-height:667px;
+}
 /* ----------- iPhone 4 and 4S ----------- */
 
 /* Portrait and Landscape */
