--- a/app/views/pass.html
+++ b/app/views/pass.html
@@ -1,5 +1,5 @@
 
 <section id="pass-screen" class="bg-teal fill-page">
 	<button (click)="nextStep()" id="go_forward"><img src="lib/img/icon_forward.png"></button>
-	<img src="lib/img/pass2.gif" id="pass-animation" alt="">
+	<img [src]="passGif" id="pass-animation" alt="">
 </section>
