--- a/lib/scss/_draw-canvas.scss
+++ b/lib/scss/_draw-canvas.scss
@@ -1,6 +1,9 @@
 .lc-color-pickers {
 	display:none;
 }
+.lc-options, .lc-picker {
+	display:none;
+}
 /* ----------- iPhone 4 and 4S ----------- */
 
 /* Portrait and Landscape */
