--- a/app/views/recap.html
+++ b/app/views/recap.html
@@ -1,7 +1,7 @@
 <section id="recap" class="bg-white fill-page">
 	<div class="super-imposed-content">
 		<div class="center view-recap-wrapper">
-			<button class="btn view-recap"><img src="lib/img/lightening-bolt.png" alt="" class="bolt"> Recap</button>
+			<button (click)="startAni()" class="btn view-recap"><img src="lib/img/lightening-bolt.png" alt="" class="bolt"> Recap</button>
 		</div>
 
 		<div class="social-icons center">
@@ -10,7 +10,7 @@
 		</div>
 
 		<div class="center new-game-wrapper">
-			<button class="btn new-game">New Game</button>
+			<button (click)="startGame()" class="btn new-game">New Game</button>
 		</div>
 	</div>
 
