starting howto page

--- a/app/views/draw.html
+++ b/app/views/draw.html
@@ -6,7 +6,7 @@
 	<img (click)="undo()" src="lib/img/icon_undo.png" alt="">
 
 	<div class="draw-prompt">
-		<p>Depressed Adele sitting next to a whale. {{drawText}}</p>
+		<p>{{drawText}}</p>
 	</div>
 
 </section>
