--- a/app/views/howto.html
+++ b/app/views/howto.html
@@ -1,1 +1,15 @@
-test
+<section id="howto" class="bg-teal fill-page">
+	<h2>How to Play</h2>
+
+	<div class="row">
+		<div class="img-wrapper">
+			<img src="lib/img/howto/albert-einstein.png" alt="Einstein">
+		</div>
+		<div class="text-wrapper">
+			<h3>WRITE!</h3>
+			<p>Start the round with a word or phrase of your choice. Every player should have a phone. A theme helps new players get started (movie, song, celebrity, etc).</p>
+		</div>
+	</div>
+
+	<a href="/projects/Telepiction">Back</a>
+</section>
