--- a/app/views/start.html
+++ b/app/views/start.html
@@ -16,6 +16,8 @@
 	</div>
 	
 	<div class="center start-game-wrapper">
-		<button (click)="startGame()" class="btn primary">Start</button>
+		<button (click)="startGame()" class="btn primary">Start</button><br />
+
+		<a href="/projects/Telepiction/howto">How to Play</a>
 	</div>
 </section>
