--- a/lib/scss/app.scss
+++ b/lib/scss/app.scss
@@ -25,7 +25,7 @@ body {
 
 	// iPhone6s
 	max-width: 375px;
-	height: 667px;
+	min-height: 500px;
 
 	box-shadow: 0 0 20px rgba(0,0,0,.5);
 	
@@ -45,5 +45,17 @@ img {
 	width: 100%;
 	img {
 		width: 53px;
+	}
+}
+
+.no-landscape {
+	display: none;
+}
+
+@media only screen  
+	and (max-device-width: 900px)
+  and (orientation: landscape) { 
+	.no-landscape {
+		display: block;
 	}
 }
