--- a/app/views/howto.html
+++ b/app/views/howto.html
@@ -11,5 +11,25 @@
 		</div>
 	</div>
 
+	<div class="row">
+		<div class="img-wrapper">
+			<img src="lib/img/howto/pass.png" alt="Pass">
+		</div>
+		<div class="text-wrapper">
+			<h3>WRITE!</h3>
+			<p>Start the round with a word or phrase of your choice. Every player should have a phone. A theme helps new players get started (movie, song, celebrity, etc).</p>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="img-wrapper">
+			<img src="lib/img/howto/albert-einstein.png" alt="Einstein">
+		</div>
+		<div class="text-wrapper">
+			<h3>WRITE!</h3>
+			<p>Start the round with a word or phrase of your choice. Every player should have a phone. A theme helps new players get started (movie, song, celebrity, etc).</p>
+		</div>
+	</div>
+
 	<a href="/projects/Telepiction">Back</a>
 </section>
