--- a/app/views/howto.html
+++ b/app/views/howto.html
@@ -16,18 +16,18 @@
 			<img src="lib/img/howto/pass.png" alt="Pass">
 		</div>
 		<div class="text-wrapper">
-			<h3>WRITE!</h3>
-			<p>Start the round with a word or phrase of your choice. Every player should have a phone. A theme helps new players get started (movie, song, celebrity, etc).</p>
+			<h3>PASS!</h3>
+			<p>Once you write something, hand your phone to the person next to you.</p>
 		</div>
 	</div>
 
 	<div class="row">
 		<div class="img-wrapper">
-			<img src="lib/img/howto/albert-einstein.png" alt="Einstein">
+			<img src="lib/img/howto/einstein-drawing.png" alt="Einstein Drawing">
 		</div>
 		<div class="text-wrapper">
-			<h3>WRITE!</h3>
-			<p>Start the round with a word or phrase of your choice. Every player should have a phone. A theme helps new players get started (movie, song, celebrity, etc).</p>
+			<h3>DRAW!</h3>
+			<p>On the new phone, look at what’s written and draw it quickly. The next person will guess what you have drawn.</p>
 		</div>
 	</div>
 
