--- a/app/views/start.html
+++ b/app/views/start.html
@@ -18,6 +18,6 @@
 	<div class="center start-game-wrapper">
 		<button (click)="startGame()" class="btn primary">Start</button><br />
 
-		<a href="/projects/Telepiction/howto">How to Play</a>
+		<a (click)="howTo()" href="javascript:;" >How to Play</a>
 	</div>
 </section>
