--- a/lib/scss/app.scss
+++ b/lib/scss/app.scss
@@ -57,5 +57,20 @@ img {
   and (orientation: landscape) { 
 	.no-landscape {
 		display: block;
+
+		z-index: 9999;
+		position: absolute;
+		top:0;
+		left:0;
+		right:0;
+		bottom:0;
+
+		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#bd702c+0,813416+100 */
+		background: rgb(189,112,44); /* Old browsers */
+		background: -moz-linear-gradient(-45deg,  rgba(189,112,44,1) 0%, rgba(129,52,22,1) 100%); /* FF3.6-15 */
+		background: -webkit-linear-gradient(-45deg,  rgba(189,112,44,1) 0%,rgba(129,52,22,1) 100%); /* Chrome10-25,Safari5.1-6 */
+		background: linear-gradient(135deg,  rgba(189,112,44,1) 0%,rgba(129,52,22,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bd702c', endColorstr='#813416',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
 	}
 }
