--- a/lib/scss/_pages.scss
+++ b/lib/scss/_pages.scss
@@ -61,6 +61,13 @@ section#start {
 		bottom: 10%;
 		width: 100%;
 	}
+
+	.logo-container {
+		position: absolute;
+		top: 25%;
+		width: 80%;
+		text-align: center;
+	}
 }
 
 // ****************************
