--- a/app/views/start.html
+++ b/app/views/start.html
@@ -1,12 +1,14 @@
 
 
 <section id="start" class="fill-page bg-teal">
-	<img id="logo" src="lib/img/logo.png">
-	<div class="form-group">
+	<div class="logo-container">
+		<img id="logo" src="lib/img/logo.png">
+	</div>
+	<!--<div class="form-group">
 		<label for="alterEgo">timed game?</label>
 		<input type="checkbox"  class="form-control"
 		[(ngModel)]="model.timed">
-	</div>
+	</div>-->
 	<div class="form-group">
 		<label for="power">Number of players </label>
 		<select class="form-control"  required
