fixing undo button

--- a/app/views/draw.html
+++ b/app/views/draw.html
@@ -3,7 +3,7 @@
 	<div class="literally"></div>
 	<button (click)="nextStep()" id="go_forward"><img src="lib/img/icon_forward.png"></button>
 
-	<img (click)="undo()" src="lib/img/icon_undo.png" alt="">
+	<img (click)="undo()" src="lib/img/icon_undo.png" alt="" class="btn-undo">
 
 	<div class="draw-prompt">
 		<p>{{drawText}}</p>
