--- a/lib/scss/_btn.scss
+++ b/lib/scss/_btn.scss
@@ -19,3 +19,17 @@
 
 	font-size: 40px;
 }
+
+.btn.start {
+	padding: 10px 30px;
+}
+
+.btn.small {
+	font-size: 20px;
+	padding: 5px 10px;
+	text-transform: uppercase;
+}
+
+a.btn {
+	text-decoration: none;
+}
