--- a/lib/scss/app.scss
+++ b/lib/scss/app.scss
@@ -18,6 +18,11 @@ body {
 	font-family: 'aileron';
 	background: #444;
 }
+
+select {
+	font-family: 'aileron', helvetica, sans-serif;
+}
+
 #wrapper {
 	width:100%;
 	margin: 0 auto;
