--- a/app/views/howto.html
+++ b/app/views/howto.html
@@ -7,7 +7,7 @@
 		</div>
 		<div class="text-wrapper">
 			<h3>WRITE!</h3>
-			<p>Start the round with a word or phrase of your choice. Every player should have a phone. A theme helps new players get started (movie, song, celebrity, etc).</p>
+			<p>Every player needs a phone. Start the round with a word or phrase of your choice. A theme helps new players get started (movie, song, celebrity, etc).</p>
 		</div>
 	</div>
 
@@ -31,5 +31,5 @@
 		</div>
 	</div>
 
-	<a (click)="back()" href="javascript:;">Back</a>
+	<a (click)="back()" href="javascript:;" class="btn small">&laquo; back</a>
 </section>
