--- a/app/views/start.html
+++ b/app/views/start.html
@@ -4,11 +4,13 @@
 	<div class="logo-container">
 		<img id="logo" src="lib/img/logo.png">
 	</div>
+	
 	<!--<div class="form-group">
 		<label for="alterEgo">timed game?</label>
 		<input type="checkbox"  class="form-control"
 		[(ngModel)]="model.timed">
-	</div>-->
+	</div>
+	-->
 	<div class="form-group player-count">
 		<label for="power">Number of players </label>
 		<select class="form-control"  required
@@ -25,3 +27,13 @@
 		<a (click)="howTo()" href="javascript:;" >How to Play</a>
 	</div>
 </section>
+
+
+<!--
+<section id="anim-text" class="fill-page bg-teal">
+	<div class="phrase">
+		Dazed and Confused Meryl Streep
+	</div>
+</section>
+
+-->
