--- a/lib/scss/_fonts.scss
+++ b/lib/scss/_fonts.scss
@@ -26,7 +26,7 @@
          url('../fonts/aileron-bold-webfont.woff') format('woff'),
          url('../fonts/aileron-bold-webfont.ttf') format('truetype'),
          url('../fonts/aileron-bold-webfont.svg#aileronbold') format('svg');
-    font-weight: normal;
-    font-style: bold;
+    font-weight: bold;
+    font-style: normal;
 
 }
