fixing android landscape bug

--- a/lib/css/app.css
+++ b/lib/css/app.css
@@ -783,7 +783,7 @@ img {
 .no-landscape {
   display: none; }
 
-@media only screen and (max-device-width: 900px) and (orientation: landscape) {
+@media only screen and (max-device-width: 900px) and (min-aspect-ratio: 13 / 9) {
   .no-landscape {
     display: block;
     z-index: 9999;
